--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,27 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body {
-  width: 100vw;
-  min-height: 100svh;
+@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;400;800&family=Holtwood+One+SC&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+
+@layer base {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    background: url("./assets/images/background-night.webp") no-repeat center/cover;
+    background-color: #333;
+    width: 100vw;
+    min-height: 100svh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
 }
+
+
+
