--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,7 @@
   }
 
   body {
-    background: url("./assets/images/background-night.webp") no-repeat center/cover;
-    background-color: #333;
+    background: rgb(0,0,0) url("./assets/images/background-night.webp") no-repeat center/cover;
     width: 100vw;
     min-height: 100svh;
     display: flex;
